refactor: update code style and cleaning for improved performance and readability